Call C++ functions from JS side.

--- a/testApp.html
+++ b/testApp.html
@@ -25,6 +25,7 @@
             }
         </style>
         <script>
+            alert(myOperations.sumOfNumbers(2, 3));
         </script>
     </head>
     <body>
