--- a/tests/2/index.html
+++ b/tests/2/index.html
@@ -12,22 +12,23 @@
         <div id="finder" class="window finder ui-draggable windows-vis unselectable">
             <nav class="control-window">
             <a href="#finder" class="close" data-rel="close">close</a>
-            <a href="#" class="minimize">minimize</a>
+            <a href="#" class="maximize">minimize</a>
             <a href="#" class="deactivate">deactivate</a>
             </nav>
             <h1 class="titleInside">Johnny's Webview</h1>
             <div class="container">
                 <div class="container-inside">
-                <div class="about-this">
-                <h2>Johnny's Webview</h2>
-                <p>Isn't this interesting?</p>
-                <p class="small">More features will be added</p>
+                    <div class="about-this">
+                    <h2>Johnny's Webview</h2>
+                    <p>Isn't this interesting?</p>
+                    <p class="small">More features will be added</p>
+                    </div>
+                    <div class="copyright">
+                    <p>Copyright © 2013 - Ionică Bizău</p>
+                    <p>The MIT License</p>
+                    </div>
                 </div>
-                <div class="copyright">
-                <p>Copyright © 2013 - Ionică Bizău</p>
-                <p>The MIT License</p>
-                </div>
-                </div>
+                <div class="resize"></div>
             </div>
         </div>
     </body>
