--- a/tests/3/index.html
+++ b/tests/3/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
     </head>
-    <body>
+    <body style="background:white">
         <script>
             setInterval(function () {
                 var pos = $API.getMousePosition();
