--- a/tests/1/index.html
+++ b/tests/1/index.html
@@ -16,6 +16,8 @@
             <button class="api-test">Maximize</button>
             <button class="api-test">Minimize</button>
             <button class="api-test">Fullscreen</button>
+            <button class="api-test">Top most</button>
+            <button class="api-test">Bottom most</button>
 
             <h1>Test Application</h1>
             <p>This is a test application for the <a href="http://github.com/IonicaBizau/johnnys-webview" target="_blank">Johnny's web view</a> project.</p>
