New window flags
 - remove minimize
 - remove maximize
 - remove close

Calling $API.setWindowFlags("REMOVE_MINIMIZE") from the JS side the minimize button will be removed from the window.

--- a/tests/1/index.html
+++ b/tests/1/index.html
@@ -18,6 +18,9 @@
             <button class="api-test">Fullscreen</button>
             <button class="api-test">Top most</button>
             <button class="api-test">Bottom most</button>
+            <button class="api-test">Remove Close</button>
+            <button class="api-test">Remove Maximize</button>
+            <button class="api-test">Remove minimize</button>
 
             <h1>Test Application</h1>
             <p>This is a test application for the <a href="http://github.com/IonicaBizau/johnnys-webview" target="_blank">Johnny's web view</a> project.</p>
