--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <header>
       <div class="container">
-        <h1>Johnnys-webview</h1>
+        <h1>johnnys-webview</h1>
         <h2>A simple web page loader as a desktop application.</h2>
 
         <section id="downloads">
