Adding text to speech application

--- a/tests/text-to-speech/index.html
+++ b/tests/text-to-speech/index.html
@@ -4,7 +4,10 @@
         <meta charset="UTF-8">
     </head>
     <body>
+        <select id="voices">
+        </select>
         <input type="text" id="text">
+        <script src="voices.js"></script>
         <script src="functions.js"></script>
     </body>
 </html>
