--- a/tests/localstorage/index.html
+++ b/tests/localstorage/index.html
@@ -7,7 +7,7 @@
     <body>
         <pre id="localstorage"></pre>
         <script>
-            document.getElementById("localstorage").innerHTML = JSON.stringify(window.localstorage || {});
+            document.getElementById("localstorage").innerHTML = JSON.stringify(window.localStorage || {});
         </script>
     </body>
 </html>
