Added font-aswesome and some CSS.

--- a/tests/file-manager/index.html
+++ b/tests/file-manager/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
         <style>
             @import url("./style.css");
             pre.console {
@@ -14,7 +15,15 @@
         <script src="functions.js"></script>
     </head>
     <body>
-        <ul class="files">
-        </ul>
+        <div class="files">
+            <div class="template file">
+                <i class="fa fa-file fa-3x"></i>
+                <p class="name"></p>
+            </div>
+            <div class="template folder">
+                <i class="fa fa-folder fa-3x"></i>
+                <p class="name"></p>
+            </div>
+        </div>
     </body>
 </html>
