--- a/tests/file-manager/index.html
+++ b/tests/file-manager/index.html
@@ -15,6 +15,10 @@
         <script src="functions.js"></script>
     </head>
     <body>
+        <div class="path">
+            <div class="dir"><i class="fa fa-home"></i></div>
+            <div class="dir template"></div>
+        </div>
         <div class="files">
             <div class="template file">
                 <i class="fa fa-file fa-3x"></i>
