Render the path to the current directory.

--- a/tests/file-manager/index.html
+++ b/tests/file-manager/index.html
@@ -16,7 +16,8 @@
     </head>
     <body>
         <div class="path">
-            <div class="dir"><i class="fa fa-home"></i></div>
+            <div class="dir not-remove">root</div>
+            <div class="dir not-remove">home</div>
             <div class="dir template"></div>
         </div>
         <div class="files">
