--- a/tests/file-manager/index.html
+++ b/tests/file-manager/index.html
@@ -11,21 +11,24 @@
                 padding: 10px;
             }
         </style>
+        <script>
+            window.onerror = function (e) {
+                $API.debug(e.toString());
+            }
+        </script>
         <script src="jquery.min.js"></script>
         <script src="functions.js"></script>
     </head>
     <body>
         <div class="path">
-            <div class="dir not-remove">root</div>
-            <div class="dir not-remove">home</div>
             <div class="dir template"></div>
         </div>
         <div class="files">
-            <div class="template file">
+            <div draggable="true" class="template file">
                 <i class="fa fa-file fa-3x"></i>
                 <p class="name"></p>
             </div>
-            <div class="template folder">
+            <div draggable="true" class="template folder">
                 <i class="fa fa-folder fa-3x"></i>
                 <p class="name"></p>
             </div>
