BAT instead of Johnny's webview

--- a/tests/2/index.html
+++ b/tests/2/index.html
@@ -15,16 +15,16 @@
                 <a href="#" class="maximize">minimize</a>
                 <a href="#" class="deactivate">deactivate</a>
             </nav>
-            <h1 class="titleInside">Johnny's Webview</h1>
+            <h1 class="titleInside">BAT</h1>
             <div class="container">
                 <div class="container-inside">
                     <div class="about-this">
-                    <h2>Johnny's Webview</h2>
+                    <h2>BAT</h2>
                     <p>Isn't this interesting?</p>
                     <p class="small">More features will be added</p>
                     </div>
                     <div class="copyright">
-                    <p>Copyright © 2013 - Ionică Bizău</p>
+                    <p>Copyright © 2013-15 - Ionică Bizău</p>
                     <p>The MIT License</p>
                     </div>
                 </div>
