Replaced johnnys-webview with BAT

--- a/tests/1/index.html
+++ b/tests/1/index.html
@@ -23,8 +23,8 @@
             <button class="api-test">Remove minimize</button>
 
             <h1>Test Application</h1>
-            <p>This is a test application for the <a href="http://github.com/IonicaBizau/johnnys-webview" target="_blank">Johnny's web view</a> project.</p>
-            <p><strong>Johnny's web view</strong> is an application written in C++ that loads a web page from the Internet or from the local machine.</p>
+            <p>This is a test application for the <a href="http://github.com/IonicaBizau/bat" target="_blank">BAT</a> project.</p>
+            <p><strong>BAT</strong> is an application written in C++ that loads a web page from the Internet or from the local machine.</p>
             <h1>Features</h1>
             <p>The HTML applications for desktop are very easy to develop. The project contains the following features:</p>
             <p>
