Updated API calls and examples.

--- a/examples/argv/index.html
+++ b/examples/argv/index.html
@@ -17,7 +17,7 @@
         <pre id="arguments"></pre>
         <script>
             arguments.innerHTML = JSON.stringify(
-                $API.argv(),
+                BAT.argv(),
                 null,
                 4
             );
