Even more fixes

--- a/examples/file-manager/index.html
+++ b/examples/file-manager/index.html
@@ -13,7 +13,7 @@
         </style>
         <script>
             window.onerror = function (e) {
-                $API.debug(e.toString());
+                BAT.debug(e.toString());
             }
         </script>
         <script src="jquery.min.js"></script>
