--- a/examples/pipes/index.html
+++ b/examples/pipes/index.html
@@ -17,7 +17,7 @@
         <pre id="pipe"></pre>
         <script>
             setTimeout(function () {
-                pipe.innerHTML = $API.runBash("cat pipe").stdout;
+                pipe.innerHTML = BAT.runBash("cat pipe").stdout;
             }, 1000);
         </script>
     </body>
