Fixed #6. Fixed dragging issues on OS X window

--- a/examples/os-x-window/index.html
+++ b/examples/os-x-window/index.html
@@ -13,20 +13,18 @@
             <nav class="control-window">
                 <a href="#finder" class="close" data-rel="close">close</a>
                 <a href="#" class="maximize">minimize</a>
-                <a href="#" class="deactivate">deactivate</a>
+                <a href="#" class="deactivate minimize">deactivate</a>
             </nav>
-            <h1 class="titleInside">BAT</h1>
+            <h1 class="titleInside">The BAT OS X window</h1>
             <div class="container">
                 <div class="container-inside">
                     <div class="about-this">
-                    <h2>BAT</h2>
-                    <p>Isn't this interesting?</p>
-                    <p class="small">More features will be added</p>
-                    </div>
-                    <div class="copyright">
-                    <p>Copyright © 2013-15 - Ionică Bizău</p>
-                    <p>The MIT License</p>
-                    </div>
+                    <h2>OS X Window</h2>
+                    <p>This window is hacked in HTML, CSS and JavaScript using the BAT framework.</p>
+                    <p class="small">Come on, I'm an OS X like window running natively on a Linux distribution.</p>
+                </div>
+                <div class="copyright">
+                    <p>Built with HTML, CSS &amp; JavaScript by Ionică Bizău</p>
                 </div>
             </div>
         </div>
