--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>bat</title>
+        <title>Bat</title>
         <!-- Mobile support -->
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
